perfect homework 1